# semiomorfologia-vieiriana

./: .gitignore  LICENSE  README.md  animal.py  humano.py  mineral.py  pyproject.toml  requirements-api.txt  requirements.txt  semiomorfologico.py  setup.py  vegetal.py
.github/workflows/: tests.yml
docs/: API.md  TEORIA.md  index.html
examples/: demo_completo.py  demo_simples.py
scripts/: run_tests.ps1  setup_windows.ps1
src/semiomorfologia/: __init__.py  cli.py
src/semiomorfologia/api/: app.py
src/semiomorfologia/aplicacao/: __init__.py  mercado.py  trl.py
src/semiomorfologia/avaliacao/: __init__.py  fame.py
src/semiomorfologia/conhecimento/: enriquecedor.py  gbif.py  pubchem.py  wikidata.py
src/semiomorfologia/core/: __init__.py  ontologia.py
src/semiomorfologia/extratores/: __init__.py  animal.py  base.py  humano.py  mineral.py  vegetal.py
src/semiomorfologia/motor/: __init__.py  abstract_kmeans.py  hylomorphism.py  mapreduce_engine.py  semiomorfologico.py
src/semiomorfologia/quantum/: __init__.py  grover_locus.py  hpanvieira.py  qcontract.py  qexpand.py
src/semiomorfologia/similaridade/: __init__.py  anti_unificacao.py  csi.py  metricas.py  semantica.py  tap_pan.py
src/semiomorfologia/visualizacao/: __init__.py  grafo.py  grafo_bipartido.py
tests/: test_api.py  test_conhecimento.py  test_extratores.py  test_motor.py  test_novos_modulos.py  test_ontologia.py  test_similaridade.py  test_v3_modulos.py  test_visualizacao.py
