[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semiomorfologia-vieiriana"
version = "3.0.0"
description = "Framework agnóstico de extração de analogias nas 4 morfologias naturais"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Licenca Semiomorfologica Vieiriana v1.0 - Uso academico livre; uso comercial requer autorizacao"}
keywords = ["semiomorfologia", "vieira", "analogia", "biomimetica", "barroco"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
